--- a/src/index.scss
+++ b/src/index.scss
@@ -46,3 +46,35 @@ nav{
   background-color:lightblue;
   text-align: center;
 }
+.calc-card{
+  margin-top: 25px;
+  padding: 15px;
+  display: flex;
+  width: 100vw;
+  img{
+    width: 50%;
+    margin-right: 10px;
+  }
+  a{
+    width: fit-content;
+    padding: 15px 30px;
+    border: 1px solid black;
+    text-decoration: none;
+    color: #0f0f0f;
+    font-size: 16px;
+
+    &:focus,
+      &:hover{
+      // font-weight: bold;
+      background-color: #0f0f0f;
+      color: whitesmoke;
+      border: none;
+    }
+
+  }
+}
+.card-text{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
