--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-top: 65px;
+  margin-top: 150px;
 }
 
 code {
@@ -22,11 +22,11 @@ nav{
     list-style-type: none;
     text-align: center;
     margin: 0;
-    padding: 15px;
   }
   li{
-    display: inline;
-    padding: 20px;
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px 5px ;
   }
   a{
     text-decoration: none;
