--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,7 @@ code {
 }
 .card-container{
   align-self: center;
-  width: 75vw;
+  width: 45vw;
 }
 nav{
   background-color:#333;
@@ -56,6 +56,7 @@ nav{
   background-color: white;
   border-radius: 10px;
   box-shadow: 2px 2px 8px #cacaca;
+  width: inherit;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -63,11 +64,12 @@ nav{
   margin: 25px 0;
   justify-content: center;
   img{
-    max-height: 250px;
+    max-width:50%;
+    object-fit: cover;
   }
   a{
     width: fit-content;
-    padding: 15px 30px;
+    padding: 10px 20px;
     border: 1px solid black;
     text-decoration: none;
     color: #0f0f0f;
@@ -86,5 +88,7 @@ nav{
   width: 50%;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
+  text-align: center;
 }
