--- a/src/index.scss
+++ b/src/index.scss
@@ -104,7 +104,7 @@ nav{
   padding: 20px 40px;
   background-color: white;
   border-radius: 10px;
-  box-shadow: 2px 2px 8px #979797;
+  box-shadow: 2px 2px 8px #cacaca;
 
   button{
     width: 150px;
