--- a/src/components/forms/form-styles.scss
+++ b/src/components/forms/form-styles.scss
@@ -1,10 +1,45 @@
-/**************
- Savings Form 
-**************/
-.savings-form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    width: 320px;
+.calculator-container {
     margin: 0 auto;
+    padding: 20px 40px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 2px 2px 8px #cacaca;
+    max-width: 500px;
+
+    div {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        margin-bottom: 10px;
+    }
+
+    button{
+        width: 150px;
+        display: block;
+        margin: 0 auto;
+        padding: 10px 20px;
+        background-color: white;
+        border: 1px solid black;
+        margin-top: 15px;
+        cursor: pointer;
+        font-size: 16px;
+        &:focus,
+        &:hover{
+        background-color: #0f0f0f;
+        color: whitesmoke;
+        border: 1px solid transparent;
+        }
+    }
+    input, 
+    select {
+        padding: 10px 30px;
+        font-size: 16px;
+        text-align: center;
+    }
 }
+
+.display-result {
+    width: 500px;
+    margin: 0 auto;
+    font-size: 1.2em;
+}
+
