--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+h1 {
+  text-align: center;
+}
 .container{
   display: flex;
   flex-direction: column;
