--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-h1 {
+h1,
+h2 {
   text-align: center;
 }
 .container{
